tests/baselines/reference/typeArgumentInferenceTransitiveConstraints.errors.txt
==== tests/cases/compiler/typeArgumentInferenceTransitiveConstraints.ts (2 errors) ====
    
    function fn<A extends Date, B extends A, C extends B>(a: A, b: B, c: C) {
                                ~~~~~~~~~~~
!!! typeArgumentInferenceTransitiveConstraints.ts(2,29): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                             ~~~~~~~~~~~
!!! typeArgumentInferenceTransitiveConstraints.ts(2,42): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        return [a, b, c];
    }
    
    var d = fn(new Date(), new Date(), new Date());
    var d: Date[]; // Should be OK (d should be Date[])
    